# 2hal9-demo

./: .gitignore  CONSCIOUSNESS_GAMES_README.md  Cargo.toml  Dockerfile  LICENSE  NEW_CONSCIOUSNESS_GAMES.md  README.md  docker-compose.yml  final-fix.sh  fix-all-imports.sh  fix-game-imports.sh  fix-genius-ai.sh  fix-remaining-imports.sh
crates/genius-ai/: Cargo.toml
crates/genius-ai/src/: collective.rs  lib.rs  provider.rs  sota.rs
crates/genius-ai/src/ai_providers/: bedrock.rs  mod.rs  ollama.rs  provider.rs
crates/genius-ai/src/providers/: bedrock.rs  mock.rs  ollama.rs
crates/genius-client/: Cargo.toml
crates/genius-client/src/: client.rs  http.rs  lib.rs  websocket.rs
crates/genius-core/: Cargo.toml
crates/genius-core/src/: error.rs  game.rs  lib.rs  player.rs  state.rs
crates/genius-engine/: Cargo.toml
crates/genius-engine/src/: analytics.rs  emergence.rs  engine.rs  lib.rs  scheduler.rs  streaming.rs
crates/genius-games/: Cargo.toml
crates/genius-games/src/: lib.rs
crates/genius-games/src/collective/: collective_maze.rs  consciousness_cascade.rs  information_horizon.rs  mirror_mind.rs  mod.rs  quantum_consensus.rs  reality_consensus.rs  recursive_reasoning.rs  swarm_optimization.rs
crates/genius-games/src/strategic/: byzantine_generals.rs  mini_go.rs  mini_holdem.rs  minority_game.rs  mod.rs  observer_game.rs  quantum_dreamer.rs  void_walker.rs
crates/genius-games/src/survival/: battle_royale.rs  hunger_games.rs  king_of_the_hill.rs  last_stand.rs  mod.rs  russian_roulette.rs  squid_game.rs
crates/genius-games/src/trust/: consciousness_poker.rs  liars_dice.rs  mod.rs  prisoners_dilemma.rs  trust_fall.rs
crates/genius-games/tests/: collective_games_e2e.rs  consciousness_games_e2e.rs  e2e_test_framework.rs  new_consciousness_games_e2e.rs  strategic_games_e2e.rs  survival_games_e2e.rs  trust_games_e2e.rs
crates/genius-server/: Cargo.toml
crates/genius-server/src/: lib.rs  main.rs  server.rs  simple_server.rs
crates/genius-server/static/: README.md  index.html
demo/: AAA_DEMOS_README.md  DEATH_GAME_SHOWCASE.md  GAME_SHOWCASE.md  README.md  ai_genius_demo.html  ai_genius_enhanced.html  byzantine_generals.html  capture_aaa_demos.py  capture_screenshots.py  collective_maze.html  consciousness_poker.html  create_death_game_gif.py  create_demo_gif.py  create_demo_previews.html  create_demo_previews.py  death_game_demo.html  demo_snapshot.md  game_simulation.rs  genius_game_launcher.html  mini_go_premium.html  mini_holdem_premium.html  premium_games_showcase.html  recursive_reasoning.html  swarm_optimization.html
demos/: emergence_showcase.rs
docker/: docker-compose.yml
docs/: DEPLOYMENT.md  PROJECT_STRUCTURE.md  original-readme.md
examples/: client_demo.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets-template.yaml  service.yaml
scripts/: create-premium-game-gifs.py  create-static-previews.sh  deploy-k8s.sh  final-fix.sh  fix-all-imports.sh  fix-game-imports.sh  fix-genius-ai.sh  fix-remaining-imports.sh  test-ollama.sh
