[package]
name = "genius-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
genius-core = { path = "../genius-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
