[package]
name = "genius-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
genius-core = { path = "../genius-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
