[package]
name = "genius-games"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
genius-core = { path = "../genius-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
