[package]
name = "genius-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "genius-server"
path = "src/main.rs"

[dependencies]
genius-core = { path = "../genius-core" }
genius-engine = { path = "../genius-engine" }
genius-ai = { path = "../genius-ai" }
genius-games = { path = "../genius-games" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
